# saleor-otel-simulator

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  storefront.py  storefront_queries.py
